# src/identity/auth/controllers/auth.controller.ts
@@ -1,4 +1,4 @@
-import { Body, Controller, Post, UseGuards } from '@nestjs/common';
+import { Body, Controller, Get, Post, UseGuards } from '@nestjs/common';
 import {
   ApiBadRequestResponse,
   ApiBody,
@@ -10,6 +10,7 @@ import {
 } from '@nestjs/swagger';
 import { AuthUser, Public } from '@shared/decorators';
 import { LocalAuthGuard } from '@shared/guards';
+import { JwtAuthGuard } from '@shared/guards/auth.guard';
 
 import { User } from '../../user/dtos/user.dto';
 
@@ -19,13 +20,18 @@ import { AuthResponseDto } from '../interfaces/auth.interface';
 import { AuthService } from '../services/auth.service';
 
 @ApiTags('auth')
-@Public()
 @Controller()
 export class AuthController {
   constructor(private readonly authSrv: AuthService) {}
 
+  @Get('profile')
+  async profile(@AuthUser() user: User): Promise<User> {
+    return user;
+  }
+
   @UseGuards(LocalAuthGuard)
   @Post('login')
+  @Public()
   @ApiOperation({
     summary: 'Login user and return access token.',
     description: 'This endpoint allows a user to login.',
@@ -42,10 +48,11 @@ export class AuthController {
     description: 'Unauthorized. Invalid credentials.',
   })
   async login(@AuthUser() user: User): Promise<AuthResponseDto> {
-    return this.authSrv.login(user);
+    return await this.authSrv.login(user);
   }
 
   @Post('register')
+  @Public()
   @ApiOperation({
     summary: 'Register a new user.',
     description: 'This endpoint allows a new user to register.',
